--- a/fit/rate_limit_Hbb.yaml
+++ b/fit/rate_limit_Hbb.yaml
@@ -5,84 +5,98 @@ SR1:
     Expected -1sigma: 0.18295374512672424
     Expected -2sigma: 0.14924240112304688
     Expected Limit: 0.2373046875
+    Observed Limit: 0.22636267730289658
   800:
     Expected +1sigma: 0.20088495314121246
     Expected +2sigma: 0.274061381816864
     Expected -1sigma: 0.10495513677597046
     Expected -2sigma: 0.07989883422851562
     Expected Limit: 0.14404296875
+    Observed Limit: 0.1441264831720711
   900:
     Expected +1sigma: 0.15168899297714233
     Expected +2sigma: 0.20793460309505463
     Expected -1sigma: 0.07651260495185852
     Expected -2sigma: 0.057643890380859375
     Expected Limit: 0.10693359375
+    Observed Limit: 0.10697236705714844
   1000:
     Expected +1sigma: 0.13378193974494934
     Expected +2sigma: 0.18528026342391968
     Expected -1sigma: 0.06673017144203186
     Expected -2sigma: 0.050273895263671875
     Expected Limit: 0.09326171875
+    Observed Limit: 0.09348042961192912
   1200:
     Expected +1sigma: 0.13170814514160156
     Expected +2sigma: 0.18472829461097717
     Expected -1sigma: 0.06433510780334473
     Expected -2sigma: 0.04815101623535156
     Expected Limit: 0.09130859375
+    Observed Limit: 0.09094551142065009
   1400:
     Expected +1sigma: 0.1457429975271225
     Expected +2sigma: 0.2071595937013626
     Expected -1sigma: 0.06935572624206543
     Expected -2sigma: 0.05149650573730469
     Expected Limit: 0.09912109375
+    Observed Limit: 0.09952543459298314
   1600:
     Expected +1sigma: 0.175155907869339
     Expected +2sigma: 0.2521305978298187
     Expected -1sigma: 0.08181476593017578
     Expected -2sigma: 0.06000518798828125
     Expected Limit: 0.1181640625
+    Observed Limit: 0.11810544788965872
   1800:
     Expected +1sigma: 0.21990332007408142
     Expected +2sigma: 0.3205505311489105
     Expected -1sigma: 0.09980201721191406
     Expected -2sigma: 0.072998046875
     Expected Limit: 0.14599609375
+    Observed Limit: 0.14601225515585417
   2000:
     Expected +1sigma: 0.27723145484924316
     Expected +2sigma: 0.4101271629333496
     Expected -1sigma: 0.12315155565738678
     Expected -2sigma: 0.08893013000488281
     Expected Limit: 0.18212890625
+    Observed Limit: 0.1819655491025366
   2200:
     Expected +1sigma: 0.365384042263031
     Expected +2sigma: 0.5489112138748169
     Expected -1sigma: 0.15863150358200073
     Expected -2sigma: 0.11354827880859375
     Expected Limit: 0.236328125
+    Observed Limit: 0.2367964051042796
   2400:
     Expected +1sigma: 0.4893806576728821
     Expected +2sigma: 0.7450284957885742
     Expected -1sigma: 0.20679473876953125
     Expected -2sigma: 0.146484375
     Expected Limit: 0.3125
+    Observed Limit: 0.3124646753929512
   2600:
     Expected +1sigma: 0.6673903465270996
     Expected +2sigma: 1.028017282485962
     Expected -1sigma: 0.2761859893798828
     Expected -2sigma: 0.1944580078125
     Expected Limit: 0.421875
+    Observed Limit: 0.4218788814767751
   3000:
     Expected +1sigma: 1.2732771635055542
     Expected +2sigma: 2.0053329467773438
     Expected -1sigma: 0.5002498626708984
     Expected -2sigma: 0.347900390625
     Expected Limit: 0.78125
+    Observed Limit: 0.7822460311244787
   3500:
     Expected +1sigma: 3.3209877014160156
     Expected +2sigma: 5.48820161819458
     Expected -1sigma: 1.2169685363769531
     Expected -2sigma: 0.8272705078125
     Expected Limit: 1.9609375
+    Observed Limit: 1.9601809709822613
 SR2:
   700:
     Expected +1sigma: 0.28690487146377563
@@ -90,84 +104,98 @@ SR2:
     Expected -1sigma: 0.13947296142578125
     Expected -2sigma: 0.10479736328125
     Expected Limit: 0.197265625
+    Observed Limit: 0.19775254244768664
   800:
     Expected +1sigma: 0.1794986128807068
     Expected +2sigma: 0.25838175415992737
     Expected -1sigma: 0.08354759216308594
     Expected -2sigma: 0.0610198974609375
     Expected Limit: 0.12109375
+    Observed Limit: 0.12086412460145107
   900:
     Expected +1sigma: 0.12836535274982452
     Expected +2sigma: 0.1863984614610672
     Expected -1sigma: 0.058746337890625
     Expected -2sigma: 0.042724609375
     Expected Limit: 0.08544921875
+    Observed Limit: 0.0856822633951377
   1000:
     Expected +1sigma: 0.109873928129673
     Expected +2sigma: 0.16163896024227142
     Expected -1sigma: 0.04937443137168884
     Expected -2sigma: 0.035808563232421875
     Expected Limit: 0.07275390625
+    Observed Limit: 0.07268665998026733
   1200:
     Expected +1sigma: 0.09661711007356644
     Expected +2sigma: 0.14474795758724213
     Expected -1sigma: 0.04147109389305115
     Expected -2sigma: 0.029552459716796875
     Expected Limit: 0.06201171875
+    Observed Limit: 0.06239872944372284
   1400:
     Expected +1sigma: 0.09732775390148163
     Expected +2sigma: 0.14991918206214905
     Expected -1sigma: 0.04001802206039429
     Expected -2sigma: 0.02835845947265625
     Expected Limit: 0.0615234375
+    Observed Limit: 0.0616740307670327
   1600:
     Expected +1sigma: 0.10690725594758987
     Expected +2sigma: 0.167561873793602
     Expected -1sigma: 0.04204161465167999
     Expected -2sigma: 0.029096603393554688
     Expected Limit: 0.06591796875
+    Observed Limit: 0.06589890302374748
   1800:
     Expected +1sigma: 0.12455543875694275
     Expected +2sigma: 0.19797161221504211
     Expected -1sigma: 0.04735767841339111
     Expected -2sigma: 0.032520294189453125
     Expected Limit: 0.07568359375
+    Observed Limit: 0.07552095190075746
   2000:
     Expected +1sigma: 0.14990517497062683
     Expected +2sigma: 0.24221564829349518
     Expected -1sigma: 0.0552254319190979
     Expected -2sigma: 0.03734779357910156
     Expected Limit: 0.08935546875
+    Observed Limit: 0.08910240890536773
   2200:
     Expected +1sigma: 0.18776798248291016
     Expected +2sigma: 0.3078514337539673
     Expected -1sigma: 0.0673532485961914
     Expected -2sigma: 0.044830322265625
     Expected Limit: 0.1103515625
+    Observed Limit: 0.11031360396845813
   2400:
     Expected +1sigma: 0.23783904314041138
     Expected +2sigma: 0.3934016525745392
     Expected -1sigma: 0.0823962390422821
     Expected -2sigma: 0.054668426513671875
     Expected Limit: 0.13720703125
+    Observed Limit: 0.137470785886066
   2600:
     Expected +1sigma: 0.31062501668930054
     Expected +2sigma: 0.5215429067611694
     Expected -1sigma: 0.1047719419002533
     Expected -2sigma: 0.06835556030273438
     Expected Limit: 0.1767578125
+    Observed Limit: 0.17690979533992707
   3000:
     Expected +1sigma: 0.5817476511001587
     Expected +2sigma: 0.9768516421318054
     Expected -1sigma: 0.18767684698104858
     Expected -2sigma: 0.11959075927734375
     Expected Limit: 0.322265625
+    Observed Limit: 0.32258492421691515
   3500:
     Expected +1sigma: 1.3981951475143433
     Expected +2sigma: 2.2973175048828125
     Expected -1sigma: 0.42964601516723633
     Expected -2sigma: 0.269378662109375
     Expected Limit: 0.7578125
+    Observed Limit: 0.7595981678871906
 combine:
   700:
     Expected +1sigma: 0.22095143795013428
@@ -175,81 +203,95 @@ combine:
     Expected -1sigma: 0.1250268518924713
     Expected -2sigma: 0.10031700134277344
     Expected Limit: 0.16357421875
+    Observed Limit: 0.16405100340225476
   800:
     Expected +1sigma: 0.1329876035451889
     Expected +2sigma: 0.18229882419109344
     Expected -1sigma: 0.06707954406738281
     Expected -2sigma: 0.050537109375
     Expected Limit: 0.09375
+    Observed Limit: 0.09358207105560765
   900:
     Expected +1sigma: 0.0941924974322319
     Expected +2sigma: 0.13090702891349792
     Expected -1sigma: 0.04639124870300293
     Expected -2sigma: 0.0345001220703125
     Expected Limit: 0.06494140625
+    Observed Limit: 0.06542106862635728
   1000:
     Expected +1sigma: 0.0802481472492218
     Expected +2sigma: 0.11273122578859329
     Expected -1sigma: 0.03833073377609253
     Expected -2sigma: 0.028881072998046875
     Expected Limit: 0.05517578125
+    Observed Limit: 0.055243839550203344
   1200:
     Expected +1sigma: 0.07184737920761108
     Expected +2sigma: 0.10296294093132019
     Expected -1sigma: 0.032855987548828125
     Expected -2sigma: 0.024169921875
     Expected Limit: 0.04833984375
+    Observed Limit: 0.04800715957533432
   1400:
     Expected +1sigma: 0.07338885217905045
     Expected +2sigma: 0.10760392993688583
     Expected -1sigma: 0.03213018178939819
     Expected -2sigma: 0.023036956787109375
     Expected Limit: 0.04833984375
+    Observed Limit: 0.04797223014816282
   1600:
     Expected +1sigma: 0.08181832730770111
     Expected +2sigma: 0.12215149402618408
     Expected -1sigma: 0.03446507453918457
     Expected -2sigma: 0.0244903564453125
     Expected Limit: 0.05224609375
+    Observed Limit: 0.052400792706394195
   1800:
     Expected +1sigma: 0.09596801549196243
     Expected +2sigma: 0.14606913924217224
     Expected -1sigma: 0.039017558097839355
     Expected -2sigma: 0.02721405029296875
     Expected Limit: 0.06005859375
+    Observed Limit: 0.06038453623414424
   2000:
     Expected +1sigma: 0.11504989862442017
     Expected +2sigma: 0.17783620953559875
     Expected -1sigma: 0.04528665542602539
     Expected -2sigma: 0.03118896484375
     Expected Limit: 0.0712890625
+    Observed Limit: 0.07109713889221575
   2200:
     Expected +1sigma: 0.14544861018657684
     Expected +2sigma: 0.2273266762495041
     Expected -1sigma: 0.05547146499156952
     Expected -2sigma: 0.03763008117675781
     Expected Limit: 0.08837890625
+    Observed Limit: 0.08832345452744693
   2400:
     Expected +1sigma: 0.18418069183826447
     Expected +2sigma: 0.29285964369773865
     Expected -1sigma: 0.06821954250335693
     Expected -2sigma: 0.045894622802734375
     Expected Limit: 0.11083984375
+    Observed Limit: 0.11080845681958154
   2600:
     Expected +1sigma: 0.24229317903518677
     Expected +2sigma: 0.3898680508136749
     Expected -1sigma: 0.08728805929422379
     Expected -2sigma: 0.05756187438964844
     Expected Limit: 0.14306640625
+    Observed Limit: 0.14321176761224944
   3000:
     Expected +1sigma: 0.44821515679359436
     Expected +2sigma: 0.739189088344574
     Expected -1sigma: 0.15521883964538574
     Expected -2sigma: 0.10045623779296875
     Expected Limit: 0.259765625
+    Observed Limit: 0.259758570919561
   3500:
     Expected +1sigma: 1.0903159379959106
     Expected +2sigma: 1.8470617532730103
     Expected -1sigma: 0.35487985610961914
     Expected -2sigma: 0.22613525390625
     Expected Limit: 0.609375
+    Observed Limit: 0.6111029792988127
